# urirun-connector-planfile

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  local.dev.txt  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
.planfile/: config.yaml
docker/: run-smoke.sh
examples/: README.md  quickstart.sh
scripts/: ci_urirun_llm_smoke.py
tests/: test_contract_conformance.py  test_planfile_connector.py
urirun_connector_planfile/: __init__.py  _exec.py  cli.py  connector.manifest.json  contracts.py  core.py
